--- a/SnowmassStyle/four-page-summary/four_page_summary.tex
+++ b/SnowmassStyle/four-page-summary/four_page_summary.tex
@@ -7,31 +7,25 @@ Progress in HEP experiment and theory will require significantly more computing,
 
 The experimental program relies for the most part on distributed high-throughput computing (HTC).  Data analysis, simulation and reconstruction of individual events are independent of each other, and groups of events can be assigned to hardware in different locations. Results are combined together when all event groups are done.  This distributed computing model was pioneered by the energy frontier experiments and is relying on a distributed infrastructure of computing centers as part of Open Science Grid in the U.S. and extending across the globe. The theoretical computing and simulation needs are more commonly addressed by high-performance computing (HPC) in which thousands to hundred thousands of tightly coupled CPUs are working simultaneously on a single problem. These resources are provided mostly through the DOE leadership-class and production class HPC facilities and the NSF XD program. 
 
-One issue for those applications that traditionally rely on HTC for their data-intensive computing is to what degree they can or should use national supercomputer centers which have traditionally been designed for HPC usage. Work is proceeding to make these HTC applications run on HPC, and to interface HPC centers to the HTC workload and data management infrastructures. The question of cost effectiveness is being discussed.  At the same time traditional HPC applications develop more data-intensive science needs, which however are currently not a good match to existing and next-generation HPC architectures.  Computational resources will have to address the demands for largely increasing data rates, to address the increased needs for data intensive computing tasks like data analytics, for comparing large samples of simulations and observational data etc. 
+One issue for those applications that traditionally rely on HTC for their data-intensive computing is to what degree they can or should use national supercomputer centers which have traditionally been designed for HPC usage. Work is proceeding to make these HTC applications run on HPC, and to interface HPC centers to the HTC workload and data management infrastructures. The question of cost effectiveness is being discussed.  Also, traditional HPC applications are developing more data-intensive science needs, which however are currently not a good match to existing and next-generation HPC architectures.  Computational resources will have to address the demands for largely increasing data rates, to address the increased needs for data intensive computing tasks like data analytics, for comparing large samples of simulations and observational data etc. 
 
-Another pressing issue faced by both HTC and HPC communities is that power limitations cause processor speeds to no longer increase exponentially, as they were for at least two decades.  Instead, new chips architectures provide multiple cores. Thus we cannot rely on new hardware to run serial codes faster and we must move to parallelizing codes to increase application performance. In addition to multi-core chips there are accelerators such as graphical processing units (GPUs) and many-core chips such as the Intel Xeon Phi. To keep compute resources to scale Moore’s scaling requires full use of many-core architectures. 
+Another pressing issue facing both HTC and HPC communities is that power limitations cause processor speeds to no longer increase exponentially, as they were for at least two decades.  Instead, new chip architectures provide multiple cores. Thus we cannot rely on new hardware to run serial codes faster and we must move to parallelizing codes to increase application performance. In addition to multi-core chips there are accelerators such as graphical processing units (GPUs) and many-core chips such as the Intel Xeon Phi. In the past computing resource needs scaled roughly with the rate that processor speeds increased, following Moore’s law. In the future this requires full use of many-core architectures. Also in the storage area scaling of disk capacity and throughput is of significant concern, as per-unit capacities no longer increase as rapidly. 
 
-In the storage area, the price of storage capacity and throughput may be of significant concern in the future as prices may not drop as rapidly as in the past and while disks have gotten bigger the interface has not gotten significantly faster.
+These changes in chip technology and high performance system architectures require to develop parallel algorithms and codes, and to train personnel to develop, support and maintain them. Different subgroups are at different stages in their efforts to port to these new technologies.  Lattice QCD, for example, started its GPU porting efforts in 2008 and has had code in production for some time, particularly for quark inversions; however, there are other parts of the code that are still only running on CPUs.  Accelerator science is also actively porting codes to GPUs. Some of the solvers and particle-in-cell infrastructures have been ported and very significant speed-ups have been obtained. The perturbative QCD community has also started using GPUs.
 
-Given the changes in chip technology and evolution of high performance systems, how will we write the parallel codes that will be needed in the future, and how will we train the personnel to develop, support and maintain them? Different subgroups are at different stages in their efforts to port to these new technologies.  Lattice QCD, for example, started its GPU porting efforts in 2008 and has had code in production for some time, particularly for quark inversions; however, there are other parts of the code that are still only running on CPUs.  
+These trends lead to vastly increasing code and system complexities. For example. only a limited number of people in the field can program GPUs. In this and other highly technical areas, developing and keeping expertise in new software technologies is a challenge, while well-trained personnel and key developers are leaving to take attractive positions in industry. Continued training is an important aspect, and there are training materials from some of the national supercomputing centers and summer schools are organized by, among others, the Virtual School of Computational Science and Engineering (www.vscse.org). We must examine whether these provide the right training for our field and whether the delivery mechanisms are timely.  Using on-line media, workbooks and wikis were suggested to enhance training.  Another area of common concern is the career path of those who become experts in software development and computing.  It is useful to help young scientists learn computing and software skills that are marketable for non-academic jobs, but it is also important that there be career paths within particle physics, including tenure-track jobs, for those working at the forefront of computation.
 
-Accelerator science is also actively porting codes to GPUs, in particular some of the solvers and particle-in-cell infrastructure have been ported.  Speedups of 50 compared to a single core and 4 compared to an OpenMP code 12-core have been seen. Perturbative QCD has also started using GPUs. Further details can be found in the subgroup reports.
+For the {\it Energy Frontier} experiments computing limitations already cause a limit to the amount of physics data that can be analyzed. The planned upgrades to the LHC energy and luminosity is expected to result in a ten-fold increase in the number of events and a ten-fold increase in event complexity.  Effort has begun to increase code efficiency and parallelism in reconstruction software and to explore the potential of GPUs.   It is being considered to save more raw events to tape and only reconstruct them selectively. The LHC produces about 15 PB of raw data per year now, but in 2021 the rate may rise to 130 PB.  Attention needs to be paid to data management and wide-area networking, to assure that network connectivity does not become a bottleneck for the distributed event analysis. It is  important to monitor storage cost and throughputs. More than half of the computing cost now are for storage, and in the future it may become cost-effective to recompute certain derived quantities rather than storing them.
 
-With increasing complexity in Only a limited number of people in the field can program GPUs. In this and other highly technical areas, developing and keeping expertise in new software technologies is a challenge while well-trained people and key developers move to attractive positions in industry. 
+The {\it Intensity Frontier} experiments have lower computing requirements but are a more diverse set. A survey was conducted and found that there is significant commonality in different experiments' needs. Sharing of resources across experiments, like in the Open Science Grid, would address peak compute resources needs. Better coordination of software development and leveraging the experience and expertise of the energy frontier experiments could increase the efficiency of intensity frontier software development.
 
-There are training materials from some of the national supercomputing centers and summer schools are organized by, among others, the Virtual School of Computational Science and Engineering (www.vscse.org), but we need to examine whether these provide the right training for our field and whether the delivery mechanisms are timely.  Using on-line media, workbooks and wikis were suggested to enhance training.  Another area of common concern is the career path of those who become experts in software development and computing.  It is useful to help young scientists learn computing and software skills that are marketable for non-academic jobs, but it is also important that there be career paths within particle physics, including tenure-track jobs, for those working at the forefront of computation.
+{\it Cosmic Frontier} experiments will greatly expand their storage needs with the start of new surveys and the development of new instruments.  Current data sets are about 1 PB, and the total data set is expected to about 50 PB in ten years. Beyond that, in 10--20 years data will be collected at the rate of 400 PB/yr. On the astrophysics and cosmology theory side, some of the most challenging simulations are being run on supercomputers. Very large simulations will require increasing computing power. Comparing simulations with observations will play a crucial role in interpretation of experiments, and simulations are needed to help design new instruments. There are very significant challenges of dealing with new computers architectures and very large data sets, as described above.  Growing archival storage, visualization of simulations and allowing public access to data are also issues that need attention.
 
-At the energy frontier, ATLAS and CMS have to limit their data rates by triggering, so computing limitations already cause a reduction in the amount of physics data that can be analyzed. Upgrades to the LHC in energy or luminosity will place more demands on the distributed computing systems for ATLAS and CMS. There is a potential for a ten-fold increase in the number of events and a ten-fold increase in event complexity.  Effort has begun to increase parallelism in reconstruction software and to explore the potential of GPUs.  Increased code efficiency could result in significant savings.  Also under consideration is saving more raw events to tape and only reconstructing them selectively. The LHC produces about 15 PB of raw data per year now, but in 2021 the rate may rise to 130 PB.  Attention needs to be paid to wide-area networking trends to assure that the network does not become a bottleneck for the distributed centers used for event analysis. It is also important to monitor cost and access rates of disk as it seems that disk prices may not drop as rapidly as they have in the past and access rates may also stagnate.  Fro example, ATLAS currently spends 60\% more on disks than it does on CPUs.  In the future, it may be best to recompute certain derived quantities rather than storing results indefinitely.
+{\it Accelerator Science} is called on to simulate new accelerator designs and to provide near-real-time simulations feedback for accelerator operation. It will be necessary to include additional physics in codes and to improve algorithms to achieve these goals. Production runs can use from 10K to 100K cores.  Considerable effort is being expended to port to new architectures in particular to address the realtime requirements.
 
-The intensity frontier experiments do not match the computing requirements of the energy frontier.  However, we found that it would be desirable to better coordinate software development of a number of intensity frontier experiments.  There is significant commonality in different experiments' needs, and it would be useful to leverage the experience and expertise of the energy frontier experiments to increase the efficiency of the intensity frontier software development.
+{\it Lattice Field Theory} calculations rely on national supercomputer centers and hardware purchased for the USQCD Computing Project. Allocations at supercomputer centers have exceeded 500 M core-hrs this year, and resource requests go up by a factor of 50 until the end of this decade. This program provides essential input for interpretation of a number of experiments, and increased precision will be required in the future.  For example, the $b$ quark mass and the strong coupling $\alpha_s$ will need to be known at the 0.25\% level, a factor of two better than now, to compare upcoming LHC Higgs observations with Standard Model predictions.  Advances in the calculation of hadronic contributions to muon $g-2$ will be needed for interpretation of the planned experimental measurement.
 
-Cosmic frontier experiments will greatly expand their storage needs with the development of new instruments.  Current data sets are about 1 PB, and the total data set is expected to about 50 PB in ten years; however, in 10--20 years data will be collected at the rate of 400 PB/yr. On the theoretical side, some of the most challenging simulations are being run on supercomputers in the areas of astrophysics and cosmology. Simulations to compare with observations and simulations to help design new instruments will require increasing computing power and play a crucial role in interpretation of experiments.  However, as mentioned above, dealing with new computers architectures will be challenging.  Growing archival storage, visualization of simulations and allowing public access to data are also issues that need attention.
-
-Accelerator science is called on to both to simulate new accelerator designs and to provide near-real-time simulations for operators of running accelerators to help them minimize beam loss. It will be necessary to include additional physics in codes and to improve algorithms to achieve these goals. Production runs can use from 10K to 100K core and about 140 M core-hrs will be used in 2013.  Considerable effort is being expended to port to new architectures.
-
-Lattice field theory calculations rely on national supercomputer centers and hardware purchased for the USQCD Computing Project. Allocations at supercomputer centers exceed 500 M core-hrs in 2013. The USQCD physics program provides essential input for interpretation of a number of experiments and increased precision will be required in the future.  For example, the $b$ quark mass and the strong coupling $\alpha_s$ will need to be known at the 0.25\% level to compare coming LHC Higgs observations with the predictions of the standard model.  Current precision is 0.5\%, and planned work should yield the desired precision in the appropriate time frame if computer power allocated increases as expected. Advances in the calculation of hadronic contributions to muon $g-2$ will be needed for interpretation of the experiment to be done at Fermilab.
-
-Perturbative QCD is essential for theoretical understanding of collider physics rates. The perturbative QCD community took advantage of the Snowmass process to port their codes to NERSC and OLCF, and to run on the Open Science Grid. Their needs are currently on the order 100K core-hrs to 1 M core-hrs depending on the complexity of the final state and the order to which the calculation is done.  They have also been benchmarking GPU codes and finding impressive speed up over a single core.  A repository of codes has been established at NERSC and a long term goal is to make it easy for experimentalists to use these codes to compute standard model rates for the processes they need.
+{\it Perturbative QCD} is essential for theoretical understanding of collider physics rates. Codes were ported to the HPC centers at  NERSC and OLCF, and also run on the Open Science Grid. They have also been benchmarking GPU codes and finding impressive speed up over a single core.  A repository of codes has been established at NERSC and a long term goal is to make it easy for experimentalists to use these codes to compute Standard Model rates for the processes they need.
 
 The {\it Distributed Computing and Facilities Infrastructures} subgroup looked at the growth trends in distributed resources as provided by the Open Science Grid, and the national high performance computing (HPC) centers.  As mentioned above, most of the experimental computing is of the HTC type, but it may be useful to do some of that work at the HPC centers.  This could save smaller experiments from large investments in hardware and personnel.  Grid computing has become important in a number of areas of science, but HEP is still the biggest user and must continue to be involved with grid computing development.  The HPC computing done in theoretical physics will require an order of magnitude increase in capacity and capability at the HPC centers in the next five years and two orders of magnitude in the next ten years.
 
