final edits of 4PS for today, I guess...

--- a/SnowmassStyle/four-page-summary/four_page_summary.tex
+++ b/SnowmassStyle/four-page-summary/four_page_summary.tex
@@ -27,22 +27,20 @@ The {\it Intensity Frontier} experiments have lower computing requirements but a
 
 {\it Perturbative QCD} is essential for theoretical understanding of collider physics rates. Codes were ported to the HPC centers at  NERSC and OLCF, and also run on the Open Science Grid. They have also been benchmarking GPU codes and finding impressive speed up over a single core.  A repository of codes has been established at NERSC and a long term goal is to make it easy for experimentalists to use these codes to compute Standard Model rates for the processes they need.
 
-The {\it Distributed Computing and Facilities Infrastructures} subgroup looked at the growth trends in distributed resources as provided by the Open Science Grid, and the national high performance computing (HPC) centers.  As mentioned above, most of the experimental computing is of the HTC type, but it may be useful to do some of that work at the HPC centers.  This could save smaller experiments from large investments in hardware and personnel.  Grid computing has become important in a number of areas of science, but HEP is still the biggest user and must continue to be involved with grid computing development.  The HPC computing done in theoretical physics will require an order of magnitude increase in capacity and capability at the HPC centers in the next five years and two orders of magnitude in the next ten years.
+The {\it Distributed Computing and Facilities Infrastructures} subgroup looked at the growth trends in distributed resources as provided by the Open Science Grid, and the national high performance computing (HPC) centers.  Most of the experiment computing is of the HTC type, but HPC centers could be used for specific work flows.  Using existing computing centers could save smaller experiments from large investments in hardware and personnel.  Distributed HTC has become important in a number of science areas outside HEP, but HEP is still the biggest user and must continue to drive the future computing development.  HPC computing needs for theoretical physics will require an order of magnitude increase in capacity and capability at the HPC centers in the next five years, and two orders of magnitude in the next ten years.
 
-The {\it Networking} subgroup considered the distributed computing model in use for large experiments and the implications for network research and engagement with the National Research and Education Networks (which carries most of our traffic). Ten research questions were posed that should be answered before 2020. There are ongoing reviews of networking needs done for ESnet. It was also pointed out that expectations of network performance need to be raised so that planning for network needs is on par with that for computing and storage.  The gap between peak bandwidth and delivered bandwidth should be narrowed.  It was not felt that wide-area network performance will be an insurmountable bottleneck in the next five to ten years as long as investments in higher performance links continue.  However, there is uncertainty as to whether network costs will drop at the same rate as they have done recently.
+The {\it Networking} subgroup considered the implications of  distributed computing on network needs, required R\&D and engagement with the National Research and Education Networks (which carries most of our traffic). A number of research questions were formulated that need to be answered before 2020. Expectations of network performance should be raised so that planning for network needs is on par with that for computing and storage.  The gap between peak bandwidth and delivered bandwidth should be narrowed.  It was not felt that wide-area network performance will be an insurmountable bottleneck in the next five to ten years as long as investments in higher performance links continue.  However, there is uncertainty as to whether network costs will drop at the same rate as they have done in the past.
 
-The {\it Software Development, Personnel and Training} subgroup has made a number of recommendations to implement three main goals.  First, use software development strategies and staffing models that result in software more widely useful to the HEP community.  Second, to be able to develop and support software that will run with optimal efficiency on future computer architectures. Third, to insure that developers and users have the training necessary to deal with the increasingly complex software environments and computing systems that will be used in the future.
+The {\it Software Development, Personnel and Training} subgroup has a number of recommendations to implement three main goals.  The first goal is to use software development strategies and staffing models that result in software more widely useful to the HEP community.  The second goal is to develop and support software that will run with optimal efficiency on future computer architectures. The third goal is to insure that developers and users have the training necessary to deal with the increasingly complex software environments and computing systems that will be used in the future.
 
-The {\it Storage and Data Management} subgroup found that storage will continue to be an expensive item for many experiments and that rather than satisfy the real requirement for storage, it is necessary to manage the cost to optimize the science output from the experiment.  It is possible that tape, which continues to be relatively inexpensive is underutilized.  While new disk technology have been arriving every 18 months, there is now less competition and the technology cycle may increase to three years.  Distribute data management software can be costly for an experiment, and research in the area could benefit a number of experiments.
+The {\it Storage and Data Management} subgroup found that storage  continues to be a cost driver for many experiments. It is necessary to manage the cost to optimize the science output from the experiment.   Tape storage continues to be relatively inexpensive and should be more utilized within the storage hierarchy.  While new disk technology have been arriving every 18 months, there is now less competition and the technology cycle slowing down.  Operating distributed data management systems can be costly for experiments, and R\&D in this area could benefit a number of experiments.
 
-To summarize, the challenging resource needs for the planned physics programs require efficient and flexible use of all resources. HEP needs both distributed High-Throughput computing and High-Performance Computing. Emerging experiment programs might consider a mix to fulfill demands. Programs to fund these resources need to continue. Sharing and opportunistic use help address resource needs, from all tiers of computing, eventually including commercial providers. There is increasing need for data intensive computing in traditionally computation-intensive fields, including at HPC, for data analytics, combining simulations and observational data etc. 
+To summarize, the challenging resource needs for the planned and proposed physics programs require efficient and flexible use of all resources. HEP needs both distributed HTC and HPC. Emerging experiment programs might consider a mix to fulfill demands. Programs to fund these resources need to continue. Sharing and opportunistic use help address resource needs, from all tiers of computing, eventually including commercial providers. There is increasing need for data intensive computing in traditionally computation-intensive fields, including at HPC centers, for data analytics, combining simulations and observational data etc. 
 
-Increasing computational demands require us to stay on the Moore’s law curve, and the field needs to pro-actively make better use of advanced architectures. With the need for more parallelization the complexity of software and systems continues to increase, impacting architectures for application frameworks, workload management systems, and also the physics code. There is an important need for developing and maintaining expertise across the field, including re-engineering of frameworks, libraries and physics codes. Unless corrective action is taken to enable us to take full advantage of the new hardware architectures we could be frozen out of cost effective computing solutions on a time scale of 10 years. There is a large code base that needs to be re-engineered, and we currently do not have enough people trained to do it.
+Increasing computational demands require us to stay on Moore’s law curve, and the field needs to pro-actively make better use of advanced computing architectures. With the need for more parallelization the complexity of software and systems continues to increase, impacting architectures for application frameworks, workload management systems, and also the physics code. There is an important need for developing and maintaining expertise across the field, including re-engineering of frameworks, libraries and physics codes. Unless corrective action is taken to enable us to take full advantage of the new hardware architectures we could be frozen out of cost effective computing solutions on a time scale of 10 years. There is a large code base that needs to be re-engineered, and we currently do not have enough people trained to do it.
 
-The continuing huge growth in observational and simulation data drives the need for continued R\&D investment in data management, data access methods, and networking.  Continued effort evolution of the data management and storage systems will be needed in order to take advantage of new network capabilities, ensure efficiency and robustness of the global data federations, and to contain the level of effort needed for operations. Significant challenges with data management and access remain, and we expect solutions that will be based on content delivery approaches, dynamic data placement, remote data access. 
+The continuing huge growth in observational and simulation data drives the need for continued R\&D investment in data management, data access methods, and networking.  Continued effort evolution of the data management and storage systems will be needed in order to take advantage of new network capabilities, ensure efficiency and robustness of the global data federations, and to contain the level of effort needed for operations. Significant challenges with data management and access remain, and we expect solutions that will be based on content delivery approaches, dynamic data placement, and remote data access. 
 
 Networks can be relied on to serve as foundation of data intensive distributed computing. Emerging network capabilities and data access technologies improve our ability to use resources independent of location, over the network. This will enable a large spectrum of provisioning of compute resources: dedicated facilities, university computing centers, opportunistic use of shared resources between PIs, even scientific communities, commercial clouds, eventually also making leadership-class HPC centers relevant for data-intensive computing. The computing models should treat networks as resource that needs to be managed and planned for. 
 
-In computation and data the field continues to learn doing more science with less resources. This requires us to be more flexible and perhaps tolerate higher levels of risk.
-
-Computing will be essential for progress in theory and experiment over the next two decades.  The advances in computer hardware that we have seen in the past may not continue at the same rate in the future.  The scientists who participated in the computing frontier have identified a number of issues as discusses above. Early attention to these issues, has the potential to increase efficiency, reduce costs, enable significantly more realistic theoretical calculations and avoiding computing bottlenecks in the experimental program that could limit scientific progress.
+Computing will be essential for progress in theory and experiment over the next two decades.  The field continues to learn doing more science with less resources, requiring us to be more flexible and perhaps tolerate higher levels of risk. The advances in computer hardware that we have seen in the past may not continue at the same rate in the future.  The issues identified in this report require continued attention. Addressing them will increase efficiency, reduce costs, enable significantly more realistic theoretical calculations and will ensure great progress in the experimental programs.
