--- a/SnowmassStyle/CpF-I5/wgreport.tex
+++ b/SnowmassStyle/CpF-I5/wgreport.tex
@@ -49,7 +49,7 @@ will continue to be best served by a persistency solution that appears to be con
 
 Distributed data management is proving to be a major success of the LHC experiments, as 
 illustrated in Figures xx,yy,zz., and is an area where the US brings much of the intellectual 
-leadership.  But this success is costly. For example the US-ATLAS M&O-funded effort that 
+leadership.  But this success is costly. For example the US-ATLAS M\&O-funded effort that 
 contributes to developing and operating the ATLAS distributed workflow and data management 
 system amounts to around \$4.5M per year.  This is in addition to the effort required to operate 
 the US Tier 1 and Tier 2 facilities.  It is difficult to imagine that the LHC-focused effort 
@@ -519,6 +519,7 @@ environments, where it offers the promise of efficient sparse or random access
 to HEP data.  To make effective use of the still small affordable quantities of 
 solid state storage, application-aware approaches to caching data on such storage 
 appear essential.
+\end{itemize}
 
 The relative rates of cost evolution of tape, rotating disk, solid-state storage, 
 networks and CPU are clearly uncertain.  However, it is certain that HEP computing
